--- a/package.json
+++ b/package.json
@@ -2,5 +2,15 @@
   "name": "enigma",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "yarn ts-node ./src/index.ts"
+  },
+  "dependencies": {
+    "@types/node": "^17.0.35",
+    "typescript": "^4.6.4"
+  },
+  "devDependencies": {
+    "ts-node": "^10.8.0"
+  }
 }
