--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "yarn ts-node ./src/index.ts"
+    "start": "yarn ts-node ./src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@types/node": "^17.0.35",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
+    "@types/jest": "^27.5.1",
+    "jest": "^28.1.0",
+    "ts-jest": "^28.0.2",
     "ts-node": "^10.8.0"
   }
 }
