--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@types/node": "^17.0.35",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "chalk": "4.1.2"
   },
   "devDependencies": {
     "@types/jest": "^27.5.1",
