--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "yarn ts-node ./src/index.ts",
+    "enigma": "yarn ts-node ./src/Enigma/index.ts",
     "test": "jest"
   },
   "dependencies": {
     "@types/node": "^17.0.35",
-    "typescript": "^4.6.4",
-    "chalk": "4.1.2"
+    "chalk": "4.1.2",
+    "commander": "^9.3.0",
+    "typescript": "^4.6.4"
   },
   "devDependencies": {
     "@types/jest": "^27.5.1",
