--- a/packages/bombe/package.json
+++ b/packages/bombe/package.json
@@ -15,6 +15,8 @@
     "@types/node": "^17.0.35",
     "chalk": "4.1.2",
     "commander": "^9.3.0",
+    "enigma": "*",
+    "graph.js": "^1.21.1",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
