--- a/packages/bombe/tsconfig.json
+++ b/packages/bombe/tsconfig.json
@@ -8,7 +8,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "composite": true,
     "noImplicitAny": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   }
 }
